--- a/.github/workflows/your-workflow.yml
+++ b/.github/workflows/your-workflow.yml
@@ -1,11 +1,11 @@
 name: Generate Snake Game
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Cela générera un nouvel image tous les jours.
   push:
     branches:
       - main
+  schedule:
+    - cron: '0 0 * * *'  # Cela générera un nouvel image tous les jours.
 
 jobs:
   generate-snake:
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Create dist folder
+        run: mkdir -p dist
+
       - name: Generate Snake
         uses: Platane/snk@v3
         with:
@@ -23,3 +26,6 @@ jobs:
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
             dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+
+      - name: List generated files
+        run: ls -la dist/
